chores: added more UI interactions

--- a/index.html
+++ b/index.html
@@ -5,23 +5,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beast Chess</title>
-    <link rel="icon" type="image/x-icon" href="./src/assets/imgs/favicon.png">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./src/assets/iconfont/iconfont.css">
+    <title>Document</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&family=Itim&family=Josefin+Sans:ital,wght@1,700&family=Playfair+Display:ital@1&display=swap');
+
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        .menu-page {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+            background-image: url('./src/assets/imgs/forest.jpg');
+            background-size: cover;
+        }
+
+        header {
+            padding: 2.5rem 0;
+            background-color: rgb(255, 115, 0);
+            width: 100%;
+        }
+
+        .shadow {
+            position: fixed;
+            display: none;
+            width: 100vw;
+            height: 100vh;
+            top: 0%;
+            left: 0%;
+            background-color: rgba(0, 0, 0, .4);
+        }
+
+        ol,
+        ul {
+            list-style: none;
+        }
+
+        h1 {
+            font-family: 'Aleo', serif;
+            font-size: 2rem;
+            font-weight: 800;
+            color: white;
+            text-align: center;
+        }
+
         .rules {
             position: absolute;
             top: 50%;
-            transform: translateY(-50%);
-            width: 90%;
+            left: 50%;
+            transform: translate(-50%, -250%);
+            width: 80%;
+            max-width: 500px;
             background-color: rgb(255, 247, 185);
-            padding: 1rem;
+            padding: 1rem 2rem;
             border-radius: 1rem;
             height: 50%;
             overflow: auto;
             transition: all .2s;
             z-index: 99;
+        }
+
+        .mode-box {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            max-width: 400px;
+            transform: translate(-50%, -250%);
+            width: 80%;
+            background-color: rgb(255, 247, 185);
+            padding: 1rem 2rem;
+            border-radius: 1rem;
             display: none;
         }
 
@@ -47,121 +105,84 @@
             color: rgb(224, 49, 0);
         }
 
-        .options {
-            width: 100%;
-            padding: 1rem;
-        }
-
-        .options button {
-            background-color: rgb(255, 204, 0);
-            padding: .5rem;
+        button {
             border: none;
-            font-size: 1rem;
-            border-radius: 50%;
-            margin-right: 1rem;
-        }
-
-        .options .iconfont {
-            font-size: 1.5rem !important;
-        }
-
-        .game-page {
-            /* width: 100%; */
-            height: 100%;
-            display: none;
-        }
-
-        .menu-page {
-            /* display: none; */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            height: 100vh;
-            background-image: url('./src/assets/imgs/forest.jpg');
-            background-size: cover;
-        }
-
-        .menu-page h1 {
+            width: 50%;
+            padding: 1rem;
+            max-width: 200px;
+            border-radius: 1rem;
+            font-size: 1.5rem;
+            font-weight: 700;
+            background-color: rgb(255, 115, 0);
             color: white;
+            cursor: pointer;
+            transition: .2s;
+            margin-top: 3rem;
+        }
+
+        button:hover {
+            background-color: white;
+            color: black;
         }
     </style>
 </head>
 
 <body>
-    <div class="main-container">
-        <main class="game-page">
-            <div class="score-box">
-                <div class="playerone-box">
-                    <h2>playOne</h2>
-                </div>
-                <div class="turn-box">Red Player's Turn</div>
-                <div class="playertwo-box">
-                    <h2>PlayerTwo</h2>
-                </div>
-            </div>
-            <section id="app"></section>
-            <div class="options">
-                <button><i class="iconfont icon-fanhui"></i></button>
-                <button><i class="iconfont icon-liebiao"></i></button>
-            </div>
-        </main>
-
-        <section class="menu-page">
-            <h1>Beast Chess</h1>
-            <button class="btn start">Start Game</button>
-            <button class="btn rule-btn">Rules</button>
-        </section>
+    <section class="menu-page">
+        <header>
+            <h1>Jungle Chess</h1>
+        </header>
+        <button class="btn start-btn">Start Game</button>
+        <button class="btn rule-btn">Rules</button>
+    </section>
 
 
-        <div class="shadow"></div>
-        <div class="game-over-modal">
-            <h3>Red Player has won!</h3>
-            <p class="game-over-text">You have beaten your opponent!</p>
-            <button>close</button>
-        </div>
+    <div class="shadow"></div>
+    <article class="rules">
+        <h2>Game Rules</h2>
+        <ol>
+            <li>
+                <h3>[Win condition]</h3><strong>Remove all enemy animals</strong> or <strong>take the enemy
+                    lair.</strong>
+                <br> If no piece is eaten for a number of turns(you can configure this setting before the start of
+                each
+                game), draw is called.
+            </li>
+            <li>
+                <h3>[Eating Rules]</h3>
+                Stronger animals can eat weaker animals. However, <strong>elephant</strong>, who is supposed to be
+                the strongest
+                animal, <strong>can be eaten by rat.</strong>
+            </li>
+            <li>The order of strength is as follows: <strong>elephant > lion > tiger > cheeta > wolf > dog > cat >
+                    rat > elephant</strong> </li>
+            <li>You cannot eat your own animals</li>
+            <li>
+                <h3>[Movement Rules]</h3>
+                When an animals moves into the enemy trap, it becomes <strong>vaulnerable</strong> and can be eaten
+                by any enemy
+                animal. But animals won't be affected by traps of their own side.
+            </li>
+            <li>Normally, animals can only move <strong>one grid at a time, horizontally or vertically</strong>,
+                with the exception
+                of rats and lions or tigers. <strong>Rats are the only animals that can move into
+                    the river</strong>. While a rat is in
+                river, it's <strong>invuneralble</strong>, but unable to eat elephants on land, nor do they can eat
+                other rats in the water, either. Tigers and
+                lions can <strong>jump
+                    across the river</strong> if they are near it.
+            </li>
+            <li>You cannot move into your own lair</li>
+        </ol>
+    </article>
 
-        <article class="rules">
-            <h2>Game Rules</h2>
-            <ol>
-                <li>
-                    <h3>[Win condition]</h3><strong>Remove all enemy animals</strong> or <strong>take the enemy
-                        lair.</strong>
-                    <br> If no piece is eaten for a number of turns(you can configure this setting before the start of
-                    each
-                    game), draw is called.
-                </li>
-                <li>
-                    <h3>[Eating Rules]</h3>
-                    Stronger animals can eat weaker animals. However, <strong>elephant</strong>, who is supposed to be
-                    the strongest
-                    animal, <strong>can be eaten by rat.</strong>
-                </li>
-                <li>The order of strength is as follows: <strong>elephant > lion > tiger > cheeta > wolf > dog > cat >
-                        rat > elephant</strong> </li>
-                <li>You cannot eat your own animals</li>
-                <li>
-                    <h3>[Movement Rules]</h3>
-                    When an animals moves into the enemy trap, it becomes <strong>vaulnerable</strong> and can be eaten
-                    by any enemy
-                    animal. But animals won't be affected by traps of their own side.
-                </li>
-                <li>Normally, animals can only move <strong>one grid at a time, horizontally or vertically</strong>,
-                    with the exception
-                    of rats and lions or tigers. <strong>Rats are the only animals that can move into
-                        the river</strong>. While a rat is in
-                    river, it's <strong>invuneralble</strong>, but unable to eat elephants on land, nor do they can eat
-                    other rats in the water, either. Tigers and
-                    lions can <strong>jump
-                        across the river</strong> if they are near it.
-                </li>
-                <li>You cannot move into your own lair</li>
-            </ol>
-        </article>
-    </div>
+    <article class="mode-box">
+        <h3>Select a game mode</h3>
 
-    <audio src="./src/assets/audio/chessMove.mp3"></audio>
-    <script type="module" src="./dist/index.js"></script>
+    </article>
+    <script type="module" src="./dist/UserIterface.js"></script>
+    <script src="./dist/Menu.js">
+    </script>
 </body>
 
 </html>
