feat: added socket.io

--- a/chat.html
+++ b/chat.html
@@ -66,10 +66,7 @@
         <input id="input" autocomplete="off" /><button>Send</button>
     </form>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io('http://localhost:3000');
-    </script>
+    <script src="./chat.js" type="module"></script>
 </body>
 
 </html>
